Cleanup - Static Code Analysis
- moved Mqpp implementation out of header into cpp file
- std::deque saved a few hundred bytes relative to std::queue
- removed some issues found by cppcheck
- cleaned compiler warnings not related to unimplemented stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ project(example_project)
 file(GLOB_RECURSE sources       src/*.cpp)
 
 add_library(mqpp SHARED ${sources}) 
-target_include_directories(mqpp PUBLIC include interface)
-target_compile_options(mqpp PUBLIC -Wall -Wextra -std=c++11 -fno-rtti -fomit-frame-pointer -O2)
+target_include_directories(mqpp PRIVATE include interface)
+target_compile_options(mqpp PRIVATE -Wall -Wextra -std=c++11 -fno-rtti -fomit-frame-pointer -O2)
 
 add_executable(mqttest test/test_main.cpp)
-target_include_directories(mqttest PUBLIC interface)
-target_link_libraries(mqttest PUBLIC mqpp)
+target_include_directories(mqttest PRIVATE interface)
+target_link_libraries(mqttest mqpp)
